# kairos-homepage

./: .gitignore  calculators.html  index.html  pyproject.toml  workflow.example.yaml
prompts/: global.example.md  implement.example.md  investigate.example.md  merge.example.md  review.example.md
stokowski/: __init__.py  __main__.py  config.py  linear.py  main.py  models.py  orchestrator.py  prompt.py  runner.py  tracking.py  web.py  workspace.py
